--- a/src/components/Addition/Projects.scss
+++ b/src/components/Addition/Projects.scss
@@ -31,26 +31,12 @@
     }
 }
 
-/*.project {*/
-/*position: relative;*/
-/*top: 0em;*/
-/*width: 44%;*/
-/*height: 27.5em;*/
-/*margin: 2.25em 2.25em;*/
-/*float: left;*/
-/*padding: 0;*/
-/*animation-name: fadeInUp;*/
-/*animation-duration: 1s;*/
-/*animation-fill-mode: both;*/
-/*box-shadow: 0 4.375em 7.5em rgba(0, 0, 0, 0.33);*/
-/*}*/
-
 .project {
     position: relative;
     top: 0em;
     width: 100%;
-    height: 27.5em;
-    margin: 2.25em auto;
+    height: 20.5em;
+    // margin: 2.25em auto;
     padding: 0;
     animation-name: fadeInUp;
     animation-duration: 1s;
@@ -71,13 +57,11 @@
     -webkit-transition: all 175ms ease;
     -moz-transition: all 175ms ease;
     transition: all 175ms ease;
-}
-
-@media screen and (max-width: 61.625em) {
-    .project .overlay {
+    @media screen and (max-width: 61.625em) {
         padding: 0 3.5em;
     }
 }
+
 
 .project h4 {
     margin: 0 0 0.625em 0;
@@ -131,7 +115,7 @@
 
 @media screen and (max-width: 61.625em) {
     .project {
-        height: 37.5em;
+        height: 20.5em;
         margin: 0 auto;
     }
 
